Factorize surefire argLine